[workspace]
default-members = [".", "shari-kernel"]

[package]
name = "shari"
version = "0.1.0"
authors = ["Yuichi Nishiwaki <nyuichi@is.s.u-tokyo.ac.jp>"]
edition = "2021"

[dependencies]
shari-kernel = { version = "=0.1.0", path = "./shari-kernel" }
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1"
regex = "1"
thiserror = "1"

[dev-dependencies]
insta = "1"
ctor = "0.2"
